<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <!-- displays server version, start time, current time, projects path-->

    <TextView
        android:id="@+id/txt_server_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_server_version"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/txt_server_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/txt_server_start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_server_start_time"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_server_version_label"/>

    <TextView
        android:id="@+id/txt_server_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_server_version"/>

    <TextView
        android:id="@+id/txt_server_current_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_server_current_time"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_server_start_time_label"/>

    <TextView
        android:id="@+id/txt_server_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_server_start_time"/>

    <TextView
        android:id="@+id/txt_server_projects_path_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_server_projects_path"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txt_server_current_time_label"/>

    <TextView
        android:id="@+id/txt_server_projects_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txt_server_current_time"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_in_browser"
        android:id="@+id/btn_open_in_browser"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>