<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/timePickerLayout">

    <TextView
        android:id="@+android:id/title"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="5dp"
        android:fadingEdge="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/time_picker_container"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_below="@android:id/title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_hours"
                android:layout_gravity="center_horizontal"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numPicker_hour"
                android:padding="10dp"
                android:layerType="hardware"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_mins"
                android:layout_gravity="center_horizontal"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numPicker_minute"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layerType="hardware"
            />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/view_interval_battery_warning"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/time_picker_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/interval_battery_warning"
        android:visibility="gone"
        />

</RelativeLayout>